
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct sockaddr_in {int sin_zero; int sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {int h_length; int h_addr; } ;
typedef int sin ;
struct TYPE_4__ {char* target; } ;
struct TYPE_3__ {int sfd; } ;


 int AF_INET ;
 int HTTPsend (char*) ;
 int IPPROTO_TCP ;
 int PF_INET ;
 int SOCK_STREAM ;
 int bcopy (int ,char*,int ) ;
 int bzero (int *,int) ;
 TYPE_2__ cfg ;
 scalar_t__ connect (int ,struct sockaddr*,int) ;
 int fprintf (int ,char*,...) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int) ;
 TYPE_1__ http ;
 int memset (struct sockaddr_in*,int ,int) ;
 int printf (char*,...) ;
 int socket (int ,int ,int ) ;
 int stderr ;

int HTTPpre(void) {
char get[] = "GET ";
struct sockaddr_in sin;
struct hostent *he;

memset(&sin,0,sizeof(struct sockaddr_in));
if ((he=gethostbyname(cfg.target))==((void*)0)) {
fprintf(stderr,"Could not resolve %s\n",cfg.target);
return (-1);
}

sin.sin_family=AF_INET;
sin.sin_port=htons(80);
bcopy(he->h_addr,(char *)&sin.sin_addr,he->h_length);
bzero(&(sin.sin_zero),8);

if ((http.sfd=socket(PF_INET,SOCK_STREAM,IPPROTO_TCP))<0) {
fprintf(stderr,"socket(TCP) error\n");
return(-1);
}

printf("Connecting to HTTP server on %s ...\n",cfg.target);

if (connect(http.sfd,(struct sockaddr *)&sin,sizeof(sin))<0) {
fprintf(stderr,"Failed to connect to HTTP\n");
return (-1);
}

printf("Connected!\n");




HTTPsend(get);
return 0;
}
